# grouplang-secretary-bot

./: .gitignore  LICENSE  Makefile  README.md  README_ca.md  README_es.md  bot_handlers.py  config.py  main.py  pyproject.toml  requirements.txt  services.py
utils/: message_utils.py  telegram_utils.py
